# WaveBase

./: .gitignore  NOTES.md  PROJECT-INFO.md  README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs
src-tauri/src/analysis/: decoder.rs  dsp.rs  mod.rs  parser.rs
src-tauri/src/commands/: library.rs  mod.rs  playback.rs  scan.rs  settings_cmd.rs  tags.rs
src-tauri/src/db/: migrations.rs  models.rs  pool.rs
src-tauri/src/playback/: mod.rs  player.rs  waveform.rs
src-tauri/src/scanner/: filesystem.rs  watcher.rs
src/components/: PlayerBar.tsx  SettingsPanel.tsx  Titlebar.tsx  Toolbar.tsx  TrackList.tsx
src/lib/: ui-logic.ts
